--- a/data/.gitignore
+++ b/data/.gitignore
@@ -1,11 +1,33 @@
-/Dane historyczne dla Kontrakty terminowe na miedź (1).csv
-/Dane historyczne dla Kontrakty terminowe na miedź.csv
-/Natural Gas Futures Historical Data (1).csv
-/Natural Gas Futures Historical Data.csv
-/^ndx_d.csv
-/chfpln_d.csv
-/eurpln_d.csv
-/gbppln_d.csv
-/usdpln_d.csv
-/xauusd_d.csv
-/DCOILBRENTEU.csv
+/XAU_USD.csv
+/XAU_USD.csv
+/XAU_USD.csv
+/USD_PLN.csv
+/USD_PLN.csv
+/USD_PLN.csv
+/NDX.csv
+/NDX.csv
+/NDX.csv
+/CHF_PLN.csv
+/CHF_PLN.csv
+/CHF_PLN.csv
+/EUR_PLN.csv
+/EUR_PLN.csv
+/EUR_PLN.csv
+/GBP_PLN.csv
+/GBP_PLN.csv
+/GBP_PLN.csv
+/GAS\#1.csv
+/GAS\#1.csv
+/GAS\#1.csv
+/GAS\#2.csv
+/GAS\#2.csv
+/GAS\#2.csv
+/MIEDZ\#2.csv
+/MIEDZ\#2.csv
+/MIEDZ\#2.csv
+/MIEDZ\#1.csv
+/MIEDZ\#1.csv
+/MIEDZ\#1.csv
+/ICE.csv
+/ICE.csv
+/ICE.csv
